languages/EmbeddedMontiArcDynamics/src/test/resources/test/embeddedmontiarcdynamic/cocos/invalid/newDynamicComponentAndPort/V2.emad
/* (c) https://github.com/MontiCore/monticore */

package newDynamicComponentAndPort;

dynamic component V2 {

    ports
        dynamic in Q b[0:3];

    instance A aaa;

    @ b::connect{
        connect b[?] -> aaa[?].a[?];
    }

}
